# text-based-rpg

./: .clang-format  .gitignore  Action.hpp  Boss.h  CMakeLists.txt  Character.cpp  Character.h  Enemy.cpp  Enemy.h  Mage.cpp  Mage.h  Makefile  Warrior.cpp  Warrior.h  formulas.hpp
buildtool/: Utils.cmake
src/: Action.cpp  Action.h  Archer.cpp  Archer.h  Boss.cpp  BuffDef.cpp  BuffDef.h  Character.cpp  Character.h  Combat.cpp  Combat.h  DamageHp.cpp  DamageHp.h  Formulas.hpp  Game.cpp  Game.h  Healer.cpp  Healer.h  README.md  Random.cpp  Random.h  Skill.cpp  Skill.h  Skills.hpp  Stat.hpp  Terminal.cpp  Terminal.h  Terminal.hpp  main.cpp
src/Character/: Character.cpp  Character.h  Stat.h
src/character/: Character.cpp  Character.h  Stat.h
src/character_classes/: Archer.cpp  Archer.h  Boss.cpp  Boss.h  Enemy.cpp  Enemy.h  Healer.cpp  Healer.h  Mage.cpp  Mage.h  Warrior.cpp  Warrior.h
src/combat/: Action.cpp  Action.h  Combat.cpp  Combat.h
src/game/: Game.cpp  Game.h  GameData.h
src/menu/: Menu.cpp  Menu.h  MenuManager.cpp  MenuManager.h  command.cpp  command.h  menu.cpp  menu.h
src/party/: Party.cpp  Party.h
src/skills/: BuffDef.cpp  BuffDef.h  DamageHp.cpp  DamageHp.h  Skill.cpp  Skill.h  SkillList.cpp  SkillList.h
